    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.
    3. No order is guaranteed for parameters from forms, contrary to the HTML 4.01 spec

Limitations: HttpUnit does not support JavaScript

Revision History:

31-Jul-2001
    Additions:
       1. Added ID property to SubmitButton and WebLink
       2. Added getSubmitButtonWithID to WebForm
       3. Added getMethod and getAction to WebForm
       4. Image map <area> tags are now recognized as links, whose text is equal to their 'alt' tag. This allows
          them to be retrieved using getLinkWith( altText ).
       5. Added version of WebRequest.selectFile which allows clients to specify the file to upload using an input
          stream rather than an actual file.

    Problems corrected:
       1. The _self target now works for forms.

20-Jul-2001
Acknowledgements:
    Thanks to Drew Varner for more sophisticated cookie handling, including Set-Cookie2 code
    Thanks to David Karr for pointing out the problem with status code 3xx responses and
    suggesting a fix for it.

Problems corrected:
    1. cookies with embedded commas and quotes are now handled
    2. Status code 3xx responses no longer result in a null pointer exception when
       invoking getText or reading the input stream.

Additions:
    1. The Set_Cookie2 header is now handled

19-Jul-2001
Additions:
    1. Added getHeaderFieldNames to WebResponse

16-Jul-2001
Acknowledgements:
    Thanks to Chris Stevenson for identifying a problem with forms lacking an action

Additions:
    1. It is now possible to see the response accompanying an error status by
       calling HttpUnitOptions.setExceptionsThrownOnErrorStatus( false ) before
       calling getResponse. This will prevent HttpUnit from throwing an exception
       in such cases. You can still check the status of the response by calling